<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_marginBottom="@dimen/dimen_8"
    android:paddingBottom="@dimen/dimen_8">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPhoto"
        android:layout_width="130dp"
        android:layout_height="190dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="@dimen/dimen_8"
        app:cardCornerRadius="@dimen/dimen_8">

        <ImageView
            android:id="@+id/imgDancePhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transitionName="@string/imgDance"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_dance_photo"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorTextBold"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewPhoto"
        app:layout_constraintTop_toTopOf="parent"
        tool:text="@string/traditional_name" />

    <TextView
        android:id="@+id/txtPlaceOfOrigin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorTextBold"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/cardViewPhoto"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        tool:text="Place of origin" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/colorTextBold"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewPhoto"
        app:layout_constraintTop_toBottomOf="@+id/txtPlaceOfOrigin"
        tool:text="Place of origin" />

</androidx.constraintlayout.widget.ConstraintLayout>